crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-view_union_all_join-hybrid_multiple_column_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "What is the effect of fibrinolysin in the reagents on the Warner-Lambert screening method for fibrinogen?"
        ]
      },
      "primary_key": {
        "id": 938
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Which compound is not an intermediate of the TCA cycle?"
        ]
      },
      "primary_key": {
        "id": 1279
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Which of the following is an intensive property of a system?"
        ]
      },
      "primary_key": {
        "id": 1289
      }
    }
  ]
}
